Add generate and view files

--- a/WebContent(New)/template/index.html
+++ b/WebContent(New)/template/index.html
@@ -35,14 +35,14 @@
 					<button type="button" class="btn-toggle-fullwidth"><i class="lnr lnr-arrow-left-circle"></i></button>
 				</div>
 				<form class="navbar-form navbar-left">
-					<div class="input-group">
+					<div class="input-group" style="margin-left: 30%;">
 						<input type="text" value="" class="form-control" placeholder="Search dashboard...">
 						<span class="input-group-btn"><button type="button" class="btn btn-primary">Go</button></span>
 					</div>
 				</form>
-				<div class="navbar-btn navbar-btn-right">
+				<!--div class="navbar-btn navbar-btn-right">
 					<a class="btn btn-success update-pro" href="https://www.themeineed.com/downloads/klorofil-pro-bootstrap-admin-dashboard-template/?utm_source=klorofil&utm_medium=template&utm_campaign=KlorofilPro" title="Upgrade to Pro" target="_blank"><i class="fa fa-rocket"></i> <span>UPGRADE TO PRO</span></a>
-				</div>
+				</div-->
 				<div id="navbar-menu">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="dropdown">
@@ -77,9 +77,9 @@
 								<li><a href="#"><i class="lnr lnr-exit"></i> <span>Logout</span></a></li>
 							</ul>
 						</li>
-						<!-- <li>
+						<!--li>
 							<a class="update-pro" href="https://www.themeineed.com/downloads/klorofil-pro-bootstrap-admin-dashboard-template/?utm_source=klorofil&utm_medium=template&utm_campaign=KlorofilPro" title="Upgrade to Pro" target="_blank"><i class="fa fa-rocket"></i> <span>UPGRADE TO PRO</span></a>
-						</li> -->
+						</li-->
 					</ul>
 				</div>
 			</div>
@@ -91,8 +91,8 @@
 				<nav>
 					<ul class="nav">
 						<li><a href="index.html" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
-						<li><a href="elements.html" class=""><i class="lnr lnr-file-empty"></i> <span>Generate Trades</span></i></a></li>
-						<li><a href="tables.html" class=""><i class="lnr lnr-dice"></i> <span>View Trades</span></a></li>
+						<li><a href="generate-trades.html" class=""><i class="lnr lnr-file-empty"></i> <span>Generate Trades</span></i></a></li>
+						<li><a href="view-trades.html" class=""><i class="lnr lnr-dice"></i> <span>View Trades</span></a></li>
 						<li><a href="page-login.html" class=""><i class="lnr lnr-cog"></i> <span>Logout</span></a></li>
 						<!--li><a href="elements.html" class=""><i class="lnr lnr-code"></i> <span>Elements</span></a></li>
 						<li><a href="charts.html" class=""><i class="lnr lnr-chart-bars"></i> <span>Charts</span></a></li>
@@ -128,7 +128,7 @@
 							<p class="panel-subtitle">Period: Oct 14, 2016 - Oct 21, 2016</p>
 						</div>
 						<div class="panel-body">
-							<div class="row">
+							<!--div class="row">
 								<div class="col-md-3">
 									<div class="metric">
 										<span class="icon"><i class="fa fa-download"></i></span>
@@ -165,7 +165,7 @@
 										</p>
 									</div>
 								</div>
-							</div>
+							</div-->
 							<div class="row">
 								<div class="col-md-9">
 									<div id="headline-chart" class="ct-chart"></div>
@@ -278,7 +278,7 @@
 					<div class="row">
 						<div class="col-md-7">
 							<!-- TODO LIST -->
-							<div class="panel">
+							<!--div class="panel">
 								<div class="panel-heading">
 									<h3 class="panel-title">To-Do List</h3>
 									<div class="right">
@@ -329,12 +329,12 @@
 										</li>
 									</ul>
 								</div>
-							</div>
+							</div-->
 							<!-- END TODO LIST -->
 						</div>
 						<div class="col-md-5">
 							<!-- TIMELINE -->
-							<div class="panel panel-scrolling">
+							<!--div class="panel panel-scrolling">
 								<div class="panel-heading">
 									<h3 class="panel-title">Recent User Activity</h3>
 									<div class="right">
@@ -367,13 +367,13 @@
 									</ul>
 									<button type="button" class="btn btn-primary btn-bottom center-block">Load More</button>
 								</div>
-							</div>
+							</div-->
 							<!-- END TIMELINE -->
 						</div>
 					</div>
-					<div class="row">
+					<!--div class="row">
 						<div class="col-md-4">
-							<!-- TASKS -->
+							< TASKS>
 							<div class="panel">
 								<div class="panel-heading">
 									<h3 class="panel-title">My Tasks</h3>
@@ -427,10 +427,10 @@
 									</ul>
 								</div>
 							</div>
-							<!-- END TASKS -->
+							< END TASKS >
 						</div>
 						<div class="col-md-4">
-							<!-- VISIT CHART -->
+							< VISIT CHART >
 							<div class="panel">
 								<div class="panel-heading">
 									<h3 class="panel-title">Website Visits</h3>
@@ -443,10 +443,10 @@
 									<div id="visits-chart" class="ct-chart"></div>
 								</div>
 							</div>
-							<!-- END VISIT CHART -->
+							< END VISIT CHART >
 						</div>
 						<div class="col-md-4">
-							<!-- REALTIME CHART -->
+							< REALTIME CHART >
 							<div class="panel">
 								<div class="panel-heading">
 									<h3 class="panel-title">System Load</h3>
@@ -469,9 +469,9 @@
 									</ul>
 								</div>
 							</div>
-							<!-- END REALTIME CHART -->
+							< END REALTIME CHART >
 						</div>
-					</div>
+					</div-->
 				</div>
 			</div>
 			<!-- END MAIN CONTENT -->
